# spec/openapi/legacy.yaml
@@ -8052,82 +8052,6 @@
           }
         }
       },
-      "GroupReport": {
-        "type": "object",
-        "properties": {
-          "group_id": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "group_name": {
-            "type": "string"
-          },
-          "group_path": {
-            "type": "string"
-          },
-          "active_devices": {
-            "type": "integer"
-          },
-          "inactive_devices": {
-            "type": "integer"
-          },
-          "registered_devices": {
-            "type": "integer"
-          },
-          "new_devices": {
-            "type": "integer"
-          },
-          "disabled_devices": {
-            "type": "integer"
-          }
-        }
-      },
-      "DeviceStatusReport": {
-        "type": "object",
-        "properties": {
-          "device_id": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "device_name": {
-            "type": "string"
-          },
-          "alias_name": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "device_model": {
-            "type": "string"
-          },
-          "device_brand": {
-            "type": "string"
-          },
-          "android_version": {
-            "type": "string"
-          },
-          "serial_number": {
-            "type": "string"
-          },
-          "is_new": {
-            "type": "boolean"
-          },
-          "last_known_location": {
-            "type": "string"
-          },
-          "days_active": {
-            "type": "integer"
-          },
-          "status": {
-            "type": "string",
-            "description": "choices- ACTIVE / INACTIVE / DISABLED"
-          },
-          "inactive_since_three_days": {
-            "type": "boolean"
-          }
-        }
-      },
       "EnterprisePolicyPartialUpdate": {
         "type": "object",
         "properties": {
@@ -8174,60 +8098,6 @@
             "type": "boolean",
             "default": false,
             "writeOnly": true
-          }
-        }
-      },
-      "EnterprisePolicyWrite": {
-        "required": [
-          "enterprise",
-          "name",
-          "policy"
-        ],
-        "type": "object",
-        "properties": {
-          "enterprise": {
-            "title": "Enterprise url",
-            "type": "string",
-            "description": "Url of the enterprise resource",
-            "format": "url"
-          },
-          "name": {
-            "title": "Policy Name",
-            "maxLength": 255,
-            "minLength": 1,
-            "type": "string",
-            "description": "Name of the Policy"
-          },
-          "description": {
-            "title": "Policy Description",
-            "type": [
-              "string",
-              "null"
-            ],
-            "description": "Details regarding the Policy"
-          },
-          "google_policy_id": {
-            "title": "Google policy id",
-            "maxLength": 255,
-            "type": [
-              "string",
-              "null"
-            ],
-            "description": "Id of the Google policy"
-          },
-          "policy": {
-            "$ref": "#/components/schemas/EnterprisePolicyData"
-          },
-          "is_template": {
-            "title": "Template status",
-            "type": "boolean",
-            "default": false,
-            "writeOnly": true
-          },
-          "is_active": {
-            "title": "Policy Active status",
-            "type": "boolean",
-            "description": "Is this policy currently active"
           }
         }
       },
@@ -8486,6 +8356,60 @@
             "type": "string",
             "description": "Lock Password (optional) for the ESPER Settings app",
             "format": "password"
+          }
+        }
+      },
+      "EnterprisePolicyWrite": {
+        "required": [
+          "enterprise",
+          "name",
+          "policy"
+        ],
+        "type": "object",
+        "properties": {
+          "enterprise": {
+            "title": "Enterprise url",
+            "type": "string",
+            "description": "Url of the enterprise resource",
+            "format": "url"
+          },
+          "name": {
+            "title": "Policy Name",
+            "maxLength": 255,
+            "minLength": 1,
+            "type": "string",
+            "description": "Name of the Policy"
+          },
+          "description": {
+            "title": "Policy Description",
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Details regarding the Policy"
+          },
+          "google_policy_id": {
+            "title": "Google policy id",
+            "maxLength": 255,
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Id of the Google policy"
+          },
+          "policy": {
+            "$ref": "#/components/schemas/EnterprisePolicyData"
+          },
+          "is_template": {
+            "title": "Template status",
+            "type": "boolean",
+            "default": false,
+            "writeOnly": true
+          },
+          "is_active": {
+            "title": "Policy Active status",
+            "type": "boolean",
+            "description": "Is this policy currently active"
           }
         }
       },
